Тест. AuthControllerTest